--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
         <p>Let's Play!</p>
     </header>
     <div>
-        <p>It's Player <span>1</span></p>
+        <p class="turn-message">It's Player <span class="player-number">1</span>'s turn</p>
+    </div>
+    <div class="grid">
+        <div class="box box-1"></div>
+        <div class="box box-2"></div>
+        <div class="box box-3"></div>
+        <div class="box box-4"></div>
+        <div class="box box-5"></div>
+        <div class="box box-6"></div>
+        <div class="box box-7"></div>
+        <div class="box box-8"></div>
+        <div class="box box-9"></div>
+    </div>
+    <div class="game-complete-popup">
+        <p class="game-complete-message">Congratulations, Player <span class="winning-player-number"></span> has won!</p>
+        <button class="play-again-button">Play Again</button>
     </div>
     
 
