--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <div class="box box-9"></div>
     </div>
     <div class="game-complete-popup">
-        <p class="game-complete-message">Congratulations, Player <span class="winning-player-number"></span> has won!</p>
+        <p class="game-complete-message">Congratulations! The winner is Player </p>
+        <p class="winning-player-number">1</p>
         <button class="play-again-button">Play Again</button>
     </div>
     
