removed hard coded results message

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <div class="box box-9"></div>
     </div>
     <div class="game-complete-popup">
-        <p class="game-complete-message">Congratulations! The winner is Player </p>
-        <p class="winning-player-number">1</p>
+        <p class="results-message"></p>
         <button class="play-again-button">Play Again</button>
     </div>
     
