--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <p class="turn-message">It's Player <span class="player-number">1</span>'s turn</p>
     </div>
     <div class="grid">
-        <div class="box box-1"></div>
-        <div class="box box-2"></div>
-        <div class="box box-3"></div>
-        <div class="box box-4"></div>
-        <div class="box box-5"></div>
-        <div class="box box-6"></div>
-        <div class="box box-7"></div>
-        <div class="box box-8"></div>
-        <div class="box box-9"></div>
+        <div class="box box-1" data-num="1"></div>
+        <div class="box box-2" data-num="2"></div>
+        <div class="box box-3" data-num="3"></div>
+        <div class="box box-4" data-num="4"></div>
+        <div class="box box-5" data-num="5"></div>
+        <div class="box box-6" data-num="6"></div>
+        <div class="box box-7" data-num="7"></div>
+        <div class="box box-8" data-num="8"></div>
+        <div class="box box-9" data-num="9"></div>
     </div>
     <div class="game-complete-popup">
         <p class="results-message"></p>
