win counter added but need to fix tie counter

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <p>Let's Play!</p>
     </header>
     <div>
+        <div class="plays-counter">
+            <p>Player 1: <span class="player1-win-count">0</span></p>
+            <p>Ties: <span class="ties-count">0</span></p>
+            <p>Player 2: <span class="player2-win-count">0</span></p>
+        </div>
         <p class="turn-message">It's Player <span class="player-number">1</span>'s turn</p>
     </div>
     <div class="grid">
