--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <body>
     <header>
         <h1>Tic Tac Toe</h1>
-        <p>Let's Play!</p>
     </header>
-    <div>
+    <div class="counter-wrapper">
         <div class="plays-counter">
             <p>Player 1: <span class="player1-win-count">0</span></p>
             <p>Ties: <span class="ties-count">0</span></p>
