fixed to fit laptop screen

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
             <p>Ties: <span class="ties-count">0</span></p>
             <p>Player 2: <span class="player2-win-count">0</span></p>
         </div>
-        <h2>Round <span class="rounds-count">1</span></h2>
         <p class="turn-message">It's Player <span class="player-number">1</span>'s turn</p>
+        <h2>Round <span class="rounds-count">1</span></h2>
+        <!-- <p class="turn-message">It's Player <span class="player-number">1</span>'s turn</p> -->
     </div>
     <div class="grid">
         <div class="box" data-num="1"></div>
