--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </header>
         <aside>
             <div>
-                <h3>Pick a mode</h3>
+                <h3 class="pick-a-mode">Pick a mode</h3>
                 <ul class="list-of-modes">
                     <li><button class="single-player-mode pick-mode pick-mode-btns">Single Player</button></li>
                     <li><button class="two-player-mode pick-mode pick-mode-btns">Two Player</button></li>
