hover and click disabled when it is computers turn

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div>
                 <h3 class="pick-a-mode">Pick a mode</h3>
                 <ul class="list-of-modes">
-                    <li><button class="single-player-mode pick-mode pick-mode-btns">Single Player</button></li>
-                    <li><button class="two-player-mode pick-mode pick-mode-btns">Two Player</button></li>
+                    <li><button class="single-player-mode pick-mode-btns">Single Player</button></li>
+                    <li><button class="two-player-mode pick-mode-btns">Two Player</button></li>
                 </ul>
             </div>
         </aside>
